[package]
name = "sql-layer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlparser = "0.34.0"
thiserror = "1"
parking_lot = "0.12.1"
itertools = "0.10"
tracing = "0.1.37"
chrono = "0.4.26"
tokio = { version = "1.28.2", features = ["full"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
bincode = "1.3.3"
integer-encoding = "3.0.4"
strum_macros = "0.24"
ordered-float = "3.0"
petgraph = "0.6.3"
futures-async-stream = "0.2.9"
futures = "0.3.25"
ahash = "0.8.3"
lazy_static = "1.4.0"
comfy-table = "7.0.1"
bytes = "1.5.0"
rust_decimal = "1"
csv = "1"
regex = "1.10.2"
clap = "4.4.11"
rustyline = "13.0.0"

[dev-dependencies]
cargo-tarpaulin = "0.27.1"
tokio-test = "0.4.2"
ctor = "0.2.0"
env_logger = "0.10"
paste = "^1.0"
rstest = "0.17"
tempfile = "3.0.7"
