[package]
name = "piggysql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlparser = "0.34.0"
thiserror = "1"
parking_lot = "0.12.1"
itertools = "0.10"
tracing = "0.1.37"
tracing-subscriber = "0.3.0"
chrono = "0.4.26"
tokio = { version = "1.28.2", features = ["full"] }
serde = { version = "1.0.196", features = ["derive", "rc"] }
bincode = "1.3.3"
integer-encoding = "3.0.4"
strum_macros = "0.24"
ordered-float = "3.0"
petgraph = "0.6.3"
futures = "0.3.25"
ahash = "0.8.3"
lazy_static = "1.4.0"
comfy-table = "7.0.1"
bytes = { version = "1.5.0", features = ["serde"] }
regex = "1.10.2"
clap ={version =  "4.5.0", features = ["derive"] }
crossbeam-skiplist = "0.1"
rand = "~0.8.3"
sled="0.34.7"
pgwire = { version = "0.19.2" }
async-trait = "0.1"
tokio-postgres = {version="0.7.10",features=["runtime"]}
moka = {version="0.12.5",features=["sync"] }
ouroboros = "0.15"
dashmap = "5.4.0"
crc32fast = "1.3.2"
lsm-tree = "0.6.2"
[dev-dependencies]
cargo-tarpaulin = "0.27.1"
tokio-test = "0.4.2"
ctor = "0.2.0"
env_logger = "0.10"
paste = "^1.0"
rstest = "0.17"
tempfile = "3.0.7"
tempdir = "~0.3.7"
criterion = { version = "0.5.1", features = ["html_reports","async_tokio"] }

[workspace]
members = [
  "tests/sqllogictest",
]

[[bench]]
name = "my_benchmark"
harness = false