[package]
name = "piggysql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlparser = "0.34.0"
thiserror = "1"
parking_lot = "0.12.1"
itertools = "0.12.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.0"
chrono = "0.4.26"
tokio = { version = "1.28.2", features = ["full"] }
serde = { version = "1.0.196", features = ["derive", "rc"] }
bincode = "1.3.3"
integer-encoding = "3.0.4"
strum_macros = "0.24"
ordered-float = "3.0"
petgraph = "0.6.3"
futures = "0.3.25"
ahash = "0.8.3"
lazy_static = "1.4.0"
comfy-table = "7.0.1"
bytes = { version = "1.5.0", features = ["serde"] }
regex = "1.10.2"
rand = "~0.8.3"
pgwire = { version = "0.19.2" }
async-trait = "0.1"
moka = { version = "0.12.5", features = ["sync", "future"] }
config = "0.14.0"
crc32fast = "1.3.2"
csv = "1"
rust_decimal = "1"
uuid = { version = "1.7.0", features = ["serde"] }
ouroboros = "0.18"
farmhash = "1"
crossbeam-channel = "0.5.11"
serde_json = { version = "1.0" }
derive-with = "0.5.0"
tracing-appender = "0.2.3"
piggykv = { path = "piggykv" }
[dev-dependencies]
cargo-tarpaulin = "0.27.1"
tokio-test = "0.4.2"
tempfile = "3.0.7"
tempdir = "~0.3.7"
criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }

[workspace]
members = ["client", "piggykv","tests/sqllogictest"]

[[bench]]
name = "my_benchmark"
harness = false
