[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-postgres = {version="0.7.10",features=["runtime"]}
tokio = { version = "1.28.2", features = ["full"] }
futures = "0.3.25"
rand = "~0.8.3"
rustyline = {version ="14.0.0",features = ["with-file-history"]}
anyhow = "1.0.80"
comfy-table = "7.0.1"