[package]
name = "piggykv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
itertools = "0.10"
# 序列化
serde = { version = "1.0.89", features = ["derive", "rc"] }
bincode = "1.3.3"
# tokio异步
tokio = { version="1.21.2", features = ["full", "signal"] }
futures = "0.3"
tokio-util = { version="0.7.3", features = ["codec"] }
tokio-stream = "0.1.9"
async-trait = "0.1.57"
# 数据承载媒介
bytes = { version = "1.2.1", features = ["serde"] }
# 日志
tracing = "0.1"
tracing-subscriber = "0.3"
# 工具
lz4 = "1.23.1"
integer-encoding = "3.0.4"
rand = "0.8.5"

chrono = "0.4.19"
parking_lot = "0.12.1"
crc32fast = "1.3.2"
skiplist = "0.5.1"
fslock = "0.2.1"
